# -AI-Powered-Alert-Prioritization-for-Wazuh.

./: .env.example  .gitignore  AGENT_002_ALERT_FILTERING_ISSUE.md  AGENT_BALANCING_AND_FIELD_FETCHING_VERIFICATION.md  ATTACK_TYPE_NORMALIZATION_IMPLEMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  CSRF_ALERT_FILTERING_FIX.md  CSRF_DETECTION_ANALYSIS.md  Dockerfile  GAPS_ANALYSIS.md  GITHUB_PUSH_COMPLETE.md  GITHUB_PUSH_SECURITY_NOTICE.md  GITHUB_SETUP.md  LICENSE  LOG_ANALYSIS_SOC_PERSPECTIVE.md  README.md  SOC_ARCHITECTURE_SUMMARY.md  SOC_IMPLEMENTATION_GUIDE.md  SOC_PIPELINE_ARCHITECTURE_DETAILED.md  SUPPLY_CHAIN_ATTACK_DETECTION_ANALYSIS.md  SUPPLY_CHAIN_ATTACK_IMPLEMENTATION.md  TIER_3_ATTACK_DETECTION_FROM_FIELDS.md  TIER_3_IMPLEMENTATION_SUMMARY.md  app.py  create_github_repo.ps1  docker-compose.yml  env.template  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  docs.yml  release.yml
configs/n8n/: flows.json
deploy/: admin_pubkey.pub  ai_blocker_pubkey.pub
docs/: ACTIVE_RESPONSE_SETUP.md  PROJECT_OVERVIEW_BILINGUAL.md  index.html
src/: __init__.py
src/analyzer/: heuristic.py  llm.py  triage.py
src/api/: app.py
src/collector/: wazuh_client.py
src/common/: alert_formatter.py  attack_type_normalizer.py  config.py  correlation.py  dedup.py  enrichment.py  fp_filtering.py  llm_cache.py  logging.py  redaction.py  timezone.py  web.py
src/orchestrator/: active_response.py  notify.py  thehive_client.py
state/: blocked_ips.json
tests/unit/: test_wazuh_token.py
tools/: test_active_response.py
